src/css/scss/fluid-covid-map-viz.scss
/* ... */
/* The parent container of filter buttons */
.fl-mapviz-filter-buttons {
    display: flex;
    justify-content: space-evenly;
}

/* "apply filters" and "reset filters" buttons */
.fl-mapviz-apply-filters,
.fl-mapviz-reset-filters {
    align-items: center;
    background-color: transparent;
    border-style: none;
    display: inline-flex;
    height: 3rem;
    width: 11rem;

    svg {
        fill: none;
        height: 1rem;
        width: 1rem;
    }

    &:hover .fl-mapviz-icon-shadow,
    &:focus .fl-mapviz-icon-shadow {
        box-shadow: 0 0 4px var(--fColor, rgba(0, 0, 0, 0.25)) inset, 0 0 0 1px var(--fColor, black);
    }
}

/******** Expand/collapse button for the city list panel, the search results panel and the a11y filter panel ********/
.fl-mapviz-expand-collapse-button-wrapper {
    background-color: #c4c4c4;
    border-radius: 1rem 1rem 0 0;
    display: flex;
    justify-content: center;
}

.expand-collapse-svg-internal-class {
    fill: var(--expand-button-color, none);
    stroke: var(--expand-button-stroke-color, black);
    stroke-width: var(--expand-button-stroke-width, 2px);
}

.fl-mapviz-expand-collapse-button {
    align-self: center;
    background: none;
    border: none;
    margin: 0.5rem 0 0.5rem 0;
    width: 4rem;

    svg {
        height: 0.7rem;
        width: 1.4rem;
    }

    &:hover,
    &:focus {
        --expand-button-color: black;
        --expand-button-stroke-width: 0;
    }

    /* Show/hide the expand or the collapse SVG based on the expanded state */
    &[aria-expanded="true"] > .fl-mapviz-expand-button,
    &[aria-expanded="false"] > .fl-mapviz-collapse-button {
        display: none;
    }
}

/******** The city list panel ********/
.fl-mapviz-city-list-title {
    align-items: center;
    box-shadow: inset 0 -7px 2px -4px rgba(0, 0, 0, 0.25);
    display: flex;
    flex-direction: row;
    justify-content: center;
    padding: 0.5rem 2rem;

    h2 {
        margin: 0 1rem 0 0;
        text-transform: uppercase;
    }

    svg {
        height: 1.5rem;
        width: 1.5rem;
    }
}

.fl-mapviz-cities {
    overflow-y: scroll;
}

/******** The search results panel ********/
.fl-mapviz-search-results,
.fl-mapviz-filter-panel,
.fl-mapviz-city-list,
.fl-mapviz-hospital-panel {
    background-color: white;
    border-radius: 1rem 1rem 0 0;
    bottom: 2.7rem;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: 0;
    max-height: calc(100% - 21rem);
    position: fixed;
    width: 100%;
    z-index: 1;
}

/* The expand/collapse button and the panel heading */
.fl-mapviz-back-button-wrapper {
    background-color: #acdeeb;
}

.fl-mapviz-search-results-back-button,
.fl-mapviz-hospital-back-button {
    align-self: center;
    background-color: #acdeeb;
    border: none;
    display: inline-flex;
    justify-content: center;
    padding: 0.5rem 0 0.5rem 0.5rem;
    width: 100%;

    svg {
        height: 1rem;
        width: 1rem;
    }

    h2 {
        align-self: center;
        margin: 0;
    }

    &:hover .fl-mapviz-icon-shadow,
    &:focus .fl-mapviz-icon-shadow {
        box-shadow: 0 0 4px var(--fColor, rgba(0, 0, 0, 0.25)) inset, 0 0 0 1px var(--fColor, black);
    }
}

/* Search result list */
.fl-mapviz-search-results-list {
    /* This list takes up the remaining space whenever there's any */
    flex-grow: 1;
    overflow-y: scroll;
}

/* For individual search result */
.fl-mapviz-search-result {
    border-bottom: 1px solid #c4c4c4;
    padding: 0.5rem 0.5rem;
}

/* For individual city */
.fl-mapviz-city {
    border-bottom: 1px solid #c4c4c4;
    margin-left: 0.5rem;
    padding: 0.5rem 0.5rem;
}

.fl-mapviz-search-result-hospital-title {
    font-weight: 700;
}

/* The hover style for each search result */
.fl-mapviz-search-result-hover {
    outline: 2px solid #55769f;
    outline-offset: -2px;
}

/* The selected style for the search result */
.fl-mapviz-search-result-selected {
    background: #fbdc90;
}

/******** The hospital description panel ********/

/* hide the hospital description panel at the page load */
.fl-mapviz-hospital-panel {
    display: none;

    .fl-mapviz-hospital-description {
        overflow-y: scroll;

        & > div {
            padding: 0.3rem;
        }
    }
}

.fl-mapviz-hospital-title {
    background: #fbdc90;
    margin: 0;
    padding: 0.5rem;
}

/******** The panel control buttons ********/
.fl-panel-controls-on-mobile {
    box-shadow: inset 0 7px 2px -4px var(--fColor, rgba(0, 0, 0, 0.25));
    display: grid;
    grid-template-columns: 1fr 1fr;
    height: 3rem;
    padding-top: 3px;
    z-index: 1;

    svg {
        height: 1rem;
        width: 1rem;
    }
}

.fl-mapviz-locations-button-on-mobile,
.fl-mapviz-filter-button-on-mobile {
    background-color: white;
    border: none;
}

.fl-mapviz-filter-button-on-mobile {
    border-left: 1px solid #c4c4c4;

    .fl-mapviz-filter-icon-on-mobile {
        display: flex;
        flex-direction: row;
        justify-content: center;
        margin-bottom: 0.3rem;

        svg {
            margin-right: 0.5rem;
        }
    }
}

/** Background for each a11y filter row **/
.fl-mapviz-filter-entrances {
    background: #6796c8;
}

.fl-mapviz-filter-washrooms {
    background: #acdeeb;
}

.fl-mapviz-filter-parking {
    background: #cee6c5;
}

.fl-mapviz-filter-individual {
    background: #fbdc90;
}

.fl-mapviz-filter-wait {
    background: #fcb33f;
}

/******** The map panel ********/
.fl-mapviz-map {
    flex: 1;
    width: 100%;
}

/* The map tooltip pane */
.fl-mapviz-map-tooltip {
    background-color: white;
    border: 1px solid black;
    font-size: 0.9rem;
    position: absolute;
    right: 1.25rem;
    top: 1.25rem;
    width: 20rem;
    z-index: 800;

    table {
        border-collapse: collapse;
    }

    tr:nth-child(even) {
        background: #eee;
    }

    tr:nth-child(odd) {
        background: #fff;
    }
}
/* ... */

