fix: Expand/collapse location/filter etc drawers by clicking top bar

--- a/src/css/scss/fluid-covid-map-viz.scss
+++ b/src/css/scss/fluid-covid-map-viz.scss
@@ -353,13 +353,6 @@ button {
 }
 
 /******** Expand/collapse button for the city list panel, the search results panel and the a11y filter panel ********/
-.fl-mapviz-expand-collapse-button-wrapper {
-    background-color: #c4c4c4;
-    border-radius: 1rem 1rem 0 0;
-    display: flex;
-    justify-content: center;
-}
-
 .expand-collapse-svg-internal-class {
     fill: var(--expand-button-color, none);
     stroke: var(--expand-button-stroke-color, black);
@@ -367,11 +360,12 @@ button {
 }
 
 .fl-mapviz-expand-collapse-button {
+    background-color: #c4c4c4;
+    border-radius: 1rem 1rem 0 0;
     align-self: center;
-    background: none;
     border: none;
-    margin: 0.5rem 0 0.5rem 0;
-    width: 4rem;
+    padding: 0.5rem 0 0.7rem 0;
+    width: 100%;
 
     svg {
         height: 0.7rem;
@@ -720,7 +714,7 @@ button {
     /* End: arrange positions of sub containers */
 
     /******** Expand/collapse buttons ********/
-    .fl-mapviz-expand-collapse-button-wrapper {
+    .fl-mapviz-expand-collapse-button {
         display: none;
     }
 
